# actionengine

./: .gitignore  CMakeLists.txt  pyproject.toml
examples/000-actions/: main.cc
examples/001-bidi-actions/: bidi_actions.cc
examples/002-chunks-from-custom-types/: main.cc
examples/003-python-speech-to-text/: run_client.py  run_server.py
examples/005-echo-server/: main.cc
examples/006-deep-research/: server.py
examples/007-python-generative-media/: client.py  launch_server.sh  redis_client.py  server.py
examples/007-python-generative-media/actions/: gemini.py  gemini_fc.py  ocr.py  redis.py
examples/007-python-generative-media/actions/deep_research/: create_plan.py  deep_research.py  gemini_helper.py  investigate.py  synthesise_findings.py
examples/008-webrtc/: main.cc
examples/010-service/: service.py
examples/011-s2/: client.py  worker.py
examples/014-complimenter/: compliment.py  server.py
js/: package-lock.json  package.json
js/src/: action.ts  asyncNode.ts  chunkStore.ts  chunkStoreWriter.ts  data.ts  msgpack.ts  session.ts  status.ts  utils.ts  webrtcStream.ts
py/actionengine/: __init__.py  actions.py  async_node.py  cli.py  data.py  global_settings.py  service.py  session.py  stream.py
py/actionengine/cli/: utils.py
py_tests/: test_action_basics.py  test_custom_connection_handler.py  test_data_ops.py  test_headers.py  test_reader_options.py  test_webrtc_stream.py  test_wire_message_buffering_behaviour.py
src/: CMakeLists.txt
src/actionengine/: actionengine_pybind11.cc
src/actionengine/actions/: action.cc  action.h  actions_pybind11.cc  registry.cc  registry.h  schema.cc  schema.h
src/actionengine/data/: conversion.h  data_pybind11.cc  data_pybind11.h  msgpack.cc  serialization.cc  serialization.h  types.cc  types.h
src/actionengine/msgpack/: msgpack.cc
src/actionengine/net/: CMakeLists.txt  stream.cc  stream.h
src/actionengine/net/webrtc/: CMakeLists.txt  server.cc  server.h  signalling_client.cc  signalling_client.h  webrtc_pybind11.cc  wire_stream.cc  wire_stream.h
src/actionengine/net/websockets/: fiber_aware_websocket_stream.cc  fiber_aware_websocket_stream.h  server.cc  server.h  websockets_pybind11.cc  wire_stream.cc  wire_stream.h
src/actionengine/nodes/: CMakeLists.txt  async_node.cc  async_node.h  node_map.cc  node_map.h  nodes_pybind11.cc
src/actionengine/proto/: converters.cc  types.proto
src/actionengine/redis/: CMakeLists.txt  chunk_store.cc  chunk_store_pybind11.cc  pubsub.cc  redis.cc  redis.h  reply.cc  reply.h  reply_parsers.cc  streams.h  test_helpers.h  test_redis_basic.cc  test_redis_pubsub.cc  test_redis_scripts.cc  test_redis_streams.cc  test_redis_zrange.cc
src/actionengine/service/: service.cc  service.h  service_pybind11.cc  service_pybind11.h  session.cc  session.h
src/actionengine/stores/: CMakeLists.txt  byte_chunking.cc  byte_chunking.h  chunk_store.cc  chunk_store.h  chunk_store_pybind11.cc  chunk_store_reader.cc  chunk_store_reader.h  chunk_store_writer.cc  chunk_store_writer.h  local_chunk_store.cc
src/actionengine/util/: CMakeLists.txt  global_settings.cc  global_settings_pybind11.cc  global_settings_pybind11.h  map_util.h  metrics.h  utils_pybind11.cc  utils_pybind11.h
web/: Dockerfile  docker-compose.yml  next.config.js  package.json  tsconfig.json
web/app/: layout.tsx
web/app/bidi-blobs/: page.tsx
web/app/blob/: page.tsx
web/app/deepresearch/: page.tsx
web/app/echo/: page.tsx
web/app/gemini/: page.tsx
web/src/: index.d.ts
web/src/actions/: chat.ts  gui.ts
web/src/components/canvas/: Genmedia.tsx
web/src/components/dom/: Chat.module.css  Chat.tsx
web/src/helpers/: actionengine.tsx
